--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=9090
 server.servlet.context-path=/forex
 
 spring.datasource.url=jdbc:mysql://52.172.35.240:3306/forex
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=inguser1
+spring.datasource.password=H@ckath0n
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
