--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 server.servlet.context-path=/forex
 
-spring.datasource.url=jdbc:mysql://52.172.35.240:3306/forexpobdb
+spring.datasource.url=jdbc:mysql://52.172.35.240:3306/forexpoddb
 spring.datasource.username=inguser1
 spring.datasource.password=H@ckath0n
 
