--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.coverage.exclusions>
+			**/dto/*,
+			**/entity/*,
+			**/constant/*,
+			**/config/*,
+			**/GlobalExceptionHandler.java*,
+		</sonar.coverage.exclusions>
 	</properties>
 
 	<dependencies>
